--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color:#676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -41,6 +45,22 @@ h1,h2,h3,h4 {
     display: inline-block;
 }
 
+.row-table{
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
 /*--------------Headings--------------*/
 header{
     margin: 0;
@@ -56,9 +76,9 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 360px;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
 }
 
 .name {
@@ -149,12 +169,40 @@ footer {
     color: #fafafa;
     text-align: center;
     padding-left: 5px;
-    transition: all 035s ease-in-out;
-    -moz-transition: all 035s ease-in-out;
-    -webkit-transition: all 035s ease-in-out;
-    -o-transition: all 035s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
 
 .cv-pdf i:hover {
     color: #e84610;
 } 
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    line-height: 7px;
+    color: #fafafa;
+    font-size: 13px;
+    text-align: center;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background-color: #e84610;
+}
+
+#footer-details{
+    padding: 20px;
+}
