--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h1,h2,h3,h4 {
 }
 
 .section-heading {
-    font-family: "exo", sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
