finished resume page with work timeline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,3 +315,20 @@ footer {
     padding: 0;
     margin: 0;
 }
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: "";
+    background: #fafafa;
+}
+
+
+.history-items {
+    margin-bottom: 30px;
+}
