--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 /*--------------Special Padding, Margins & Text--------------*/
 h1,h2,h3,h4 {
     margin: 0;
@@ -331,4 +335,36 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*--------------Contact Form--------------*/
+
+.contact-heading {
+    font-family: "Exo", san-serif;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin: 15px auto 20px auto;
+    color: #fafafa;
+    background-color:#e84610; 
+}
+
+/*--------------Contact Form--------------*/
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
